@@ -1,0 +1,6 @@
+kind: import
+
+sources:
+- kind: remote
+  url: project-root:/files/apples
+  ref: 39ac5969800f779603237d01dc0be28dd795a33c591af6c7736264482265930a
