@@ -1,0 +1,12 @@
+kind: import
+
+build-depends:
+- apples.bst
+
+runtime-depends:
+- oranges.bst
+
+sources:
+- kind: remote
+  url: project-root:/files/bananas
+  ref: e49295702f7da8670778e9b95a281b72b41b31cb16afa376034b45f59a18ea3f
