@@ -1,0 +1,6 @@
+kind: import
+
+sources:
+- kind: remote
+  url: project-root:/files/oranges
+  ref: b19fe3ce519db5b79021aed3e83d9533631d69b15813f9e198a4ba4a3107deaa
