@@ -7,6 +7,7 @@ CLI
 
   o `bst shell --build` will now automatically fetch missing sources.
   o `bst build --deps` now also accepts "build" as an input.
+  o `bst source fetch --deps` now also accepts "build" and "run" as inputs.
 
 
 Format
